# plugin-sheets

./: .gitignore  BREAKAGE_LOG.md  CLAUDE.md  Cargo.toml  DECIMAL-SPIKE.md  LICENSE.md  README.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: publish.yml  rust.yml  vitest.yml
corpus/decimal-corpus/: divergence.golden.tsv
corpus/fn-corpus/agg/: average.golden.tsv  count.golden.tsv  counta.golden.tsv  countblank.golden.tsv  countif.golden.tsv  max.golden.tsv  min.golden.tsv  sumif.golden.tsv
corpus/fn-corpus/array/: filter.golden.tsv  sequence.golden.tsv  sort.golden.tsv  sortby.golden.tsv  textsplit.golden.tsv  transpose.golden.tsv  unique.golden.tsv
corpus/fn-corpus/coerce/: comparison.golden.tsv  empty.golden.tsv  errors.golden.tsv  to_bool.golden.tsv  to_number.golden.tsv  to_text.golden.tsv
corpus/fn-corpus/database/: daverage.golden.tsv  dcount.golden.tsv  dcounta.golden.tsv  dget.golden.tsv  dmax.golden.tsv  dmin.golden.tsv  dproduct.golden.tsv  dstdev.golden.tsv  dstdevp.golden.tsv  dsum.golden.tsv  dvar.golden.tsv  dvarp.golden.tsv
corpus/fn-corpus/date/: date.golden.tsv  day.golden.tsv  hour.golden.tsv  minute.golden.tsv  month.golden.tsv  second.golden.tsv  time.golden.tsv  weekday.golden.tsv  year.golden.tsv
corpus/fn-corpus/date2/: datedif.golden.tsv  datevalue.golden.tsv  days.golden.tsv  days360.golden.tsv  edate.golden.tsv  eomonth.golden.tsv  isoweeknum.golden.tsv  networkdays.golden.tsv  timevalue.golden.tsv  weeknum.golden.tsv  workday.golden.tsv  yearfrac.golden.tsv
corpus/fn-corpus/fin/: db.golden.tsv  ddb.golden.tsv  fv.golden.tsv  ipmt.golden.tsv  irr.golden.tsv  mirr.golden.tsv  nper.golden.tsv  npv.golden.tsv  pmt.golden.tsv  ppmt.golden.tsv  pv.golden.tsv  rate.golden.tsv  sln.golden.tsv  syd.golden.tsv  xirr.golden.tsv  xnpv.golden.tsv
corpus/fn-corpus/info/: isblank.golden.tsv  iserr.golden.tsv  iserror.golden.tsv  islogical.golden.tsv  isna.golden.tsv  isnumber.golden.tsv  istext.golden.tsv  na.golden.tsv
corpus/fn-corpus/info2/: error_type.golden.tsv  iseven.golden.tsv  isodd.golden.tsv  n.golden.tsv  sheet.golden.tsv  sheets.golden.tsv  type.golden.tsv
corpus/fn-corpus/logical/: and.golden.tsv  false.golden.tsv  if.golden.tsv  iferror.golden.tsv  not.golden.tsv  or.golden.tsv  true.golden.tsv
corpus/fn-corpus/logical2/: ifna.golden.tsv  ifs.golden.tsv  switch.golden.tsv  xor.golden.tsv
corpus/fn-corpus/lookup/: choose.golden.tsv  column.golden.tsv  (+5 more)
corpus/format-corpus/: color.golden.tsv  conditional.golden.tsv  currency.golden.tsv  datetime.golden.tsv  elapsed.golden.tsv  fractions.golden.tsv  general.golden.tsv  locale-de.golden.tsv  locale-latin.golden.tsv  number.golden.tsv  padding.golden.tsv  percent.golden.tsv  scientific.golden.tsv  sections.golden.tsv  text.golden.tsv
corpus/xlsx-corpus/: 01-minimal.xlsx  02-formulas.xlsx  03-styles.xlsx  04-unknown-parts.xlsx  05-unknown-subtrees.xlsx  06-multisheet-1904.xlsx  07-tables.xlsx  08-condfmt.xlsx  09-chart.xlsx  10-extlink.xlsx  11-freeze.xlsx  12-datavalidation.xlsx  13-comments.xlsx  generate.py
registry/features/: calc.yaml  chart.yaml  coerce.yaml  comments.yaml  condfmt.yaml  data-validation.yaml  decimal.yaml  edit.yaml  extlink.yaml  format.yaml  format2.yaml  freeze.yaml  grid.yaml  itercalc.yaml  locale.yaml  lower.yaml  paginate.yaml  parser.yaml  pivot.yaml  plugin.yaml  spill.yaml  stylemap.yaml  tables.yaml  xlsx.yaml
registry/functions/: agg.yaml  array.yaml  database.yaml  date.yaml  date2.yaml  fin.yaml  info.yaml  info2.yaml  logical.yaml  logical2.yaml  lookup.yaml  lookup2.yaml  math.yaml  math2.yaml  stat.yaml  t2misc.yaml  text.yaml  text2.yaml
scripts/: build-wasm.sh  check-contract-imports.mjs
sheet-calc/: Cargo.toml
sheet-calc/src/: argview.rs  dirty.rs  eval.rs  external.rs  graph.rs  iterate.rs  lib.rs  spill.rs  topo.rs  volatile.rs
sheet-chart/: Cargo.toml
sheet-chart/src/: backend.rs  geometry.rs  lib.rs  model.rs
sheet-conformance/: Cargo.toml
sheet-conformance/src/: lib.rs
sheet-conformance/tests/: calc_graph.rs  calc_order.rs  calc_rewrite.rs  chart.rs  coerce.rs  comments.rs  condfmt.rs  corpus_runner.rs  data_validation.rs  decimal_spike.rs  edit_ops.rs  extlink.rs  fn_agg.rs  fn_array.rs  fn_database.rs  fn_date.rs  fn_date2.rs  fn_fin.rs  fn_info.rs  fn_info2.rs  fn_logical.rs  fn_logical2.rs  fn_lookup.rs  fn_lookup2.rs  fn_math.rs  fn_math2.rs  fn_stat.rs  fn_t2misc.rs  fn_text.rs  fn_text2.rs  format.rs  format2.rs  freeze.rs  itercalc.rs  js_surface.rs  locale.rs  lower.rs  oracle.rs  paginate.rs  parser_roundtrip.rs  (+6 more)
sheet-core/: Cargo.toml  build.rs
sheet-core/src/: ast.rs  calc_settings.rs  cell.rs  funcs.rs  intern.rs  lib.rs  model.rs  names.rs  preserved.rs  refs.rs  style.rs  table.rs  value.rs
sheet-core/tests/: contract.rs
sheet-fn/: Cargo.toml  build.rs
sheet-fn/src/: arg.rs  coerce.rs  criteria.rs  ctx.rs  dispatch.rs  lib.rs  num.rs  num_decimal.rs  result.rs
sheet-fn/src/families/: agg.rs  array.rs  database.rs  date.rs  date2.rs  fin.rs  info.rs  info2.rs  logical.rs  logical2.rs  lookup.rs  lookup2.rs  math.rs  math2.rs  mod.rs  stat.rs  t2misc.rs  text.rs  text2.rs
sheet-format/: Cargo.toml
sheet-format/src/: cache.rs  datetime.rs  general.rs  lib.rs  locale.rs  number.rs  parse.rs  sections.rs  serial.rs
sheet-format/tests/: serial_props.rs
sheet-grid/: Cargo.toml
sheet-grid/src/: lib.rs
sheet-js/: Cargo.toml
sheet-js/src/: core.rs  lib.rs
sheet-lower/: Cargo.toml
sheet-lower/src/: condfmt.rs  lib.rs  paginate.rs  style.rs
sheet-parser/: Cargo.toml
sheet-parser/src/: error.rs  extract.rs  lexer.rs  lib.rs  pratt.rs  print.rs  refs.rs  rewrite.rs  structured.rs  tests.rs
sheet-xlsx/: Cargo.toml
sheet-xlsx/src/: error.rs  lib.rs  opc.rs  preserve.rs  rels.rs  sheet_doc.rs  write.rs
sheet-xlsx/src/parts/: chart.rs  comments.rs  conditional_format.rs  data_validation.rs  external_link.rs  freeze.rs  mod.rs  shared_strings.rs  styles.rs  tables.rs  workbook.rs  worksheet.rs
(+118 files in other folders)
