# paged.sheet — Rust workspace. Crates live at REPO TOP LEVEL per the
# spec (§4 of thoughts/docs/paged/plugin-sheets/base-idea.md), not under
# crates/. references/ is NEVER a member (read-only clean-room mounts —
# NOT mounted in T0). Reserved members (T1/T2, spec §4): sheet-grid,
# sheet-chart — added when their tiers land.
[workspace]
resolver = "2"
members = [
    "sheet-core",
    "sheet-parser",
    "sheet-calc",
    "sheet-fn",
    "sheet-format",
    "sheet-xlsx",
    "sheet-lower",
    "sheet-js",
    "sheet-conformance",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.93"
license = "MPL-2.0 OR LicenseRef-PMEL"
publish = false

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
needless_pass_by_value = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
thiserror = "2"
compact_str = { version = "0.8", features = ["serde"] }
smallvec = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
ryu = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
proptest = "1"

# wasm-opt is run by scripts/build-wasm.sh (binaryen pinned in CI — see
# the binaryen reftypes gotcha; locally it is skipped when absent).

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
