# paged.sheet — Rust workspace. Crates live at REPO TOP LEVEL per the
# spec (§4 of thoughts/docs/paged/plugin-sheets/base-idea.md), not under
# crates/. references/ is NEVER a member (read-only clean-room mounts —
# NOT mounted in T0). sheet-grid joins at M1 (T1, spec §8.1 — the
# sheets-mode vector grid scene). sheet-chart joins at M2 Phase A (T2, spec
# §8.4 — the chart model + pure geometry IR generator).
[workspace]
resolver = "2"
members = [
    "sheet-core",
    "sheet-parser",
    "sheet-calc",
    "sheet-fn",
    "sheet-format",
    "sheet-xlsx",
    "sheet-lower",
    "sheet-grid",
    "sheet-chart",
    "sheet-js",
    "sheet-conformance",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.93"
license = "MPL-2.0 OR LicenseRef-PMEL"
publish = false

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
needless_pass_by_value = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
thiserror = "2"
compact_str = { version = "0.8", features = ["serde"] }
smallvec = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# Chart layout engine (sheet-chart, spec §8.4). default-features = false keeps
# ONLY plotters-core: the ChartBuilder/coordinate engine + the DrawingBackend
# trait + the series helpers — NO bitmap/svg backend, NO font rasterizer
# (ttf-parser/font-kit/ab_glyph), NO `image`. sheet-chart drives a CUSTOM
# vector DrawingBackend that emits the frozen ChartGeometry IR; text metrics
# are approximated in the backend (no font feature). The series helpers
# (histogram/line/area/point) carry no extra deps.
plotters = { version = "0.3", default-features = false, features = [
    "histogram",
    "line_series",
    "area_series",
    "point_series",
] }
plotters-backend = { version = "0.3", default-features = false }
serde_json = "1"
ryu = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
proptest = "1"

# wasm-opt is run by scripts/build-wasm.sh (binaryen pinned in CI — see
# the binaryen reftypes gotcha; locally it is skipped when absent).

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
