[package]
name = "sheet-js"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "paged.sheet wasm-bindgen surface (spec §4 sheet-js): the SheetHandle the bundle consumes. crate-type cdylib for the wasm artifact."

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sheet-core = { path = "../sheet-core" }
sheet-parser = { path = "../sheet-parser" }
sheet-calc = { path = "../sheet-calc" }
sheet-fn = { path = "../sheet-fn" }
sheet-format = { path = "../sheet-format" }
sheet-xlsx = { path = "../sheet-xlsx" }
sheet-lower = { path = "../sheet-lower" }
sheet-grid = { path = "../sheet-grid" }
# The M2 charts track (spec §8.4): sheet-js resolves a parsed chart's series
# RangeRefs to PlotData and calls the pure `sheet_chart::generate` to produce
# the geometry IR that crosses the wasm door (the lowering / grid view consume
# it). Pure leaf crate (deps = core+format), no SDK, no inter-plugin contact.
sheet-chart = { path = "../sheet-chart" }
serde.workspace = true
# `zip` is already in the tree (sheet-xlsx); used here only to author the
# embedded empty workbook for the `SheetEngine::new()` start-without-a-file path.
zip.workspace = true

# wasm-only boundary deps (referenced solely inside #[cfg(target_arch =
# "wasm32")] mod wasm). On the native build (the conformance test target) they
# are unused-but-present — harmless; the cargo-tree guard checks the wasm tree.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
