[package]
name = "sheet-lower"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "paged.sheet pure range -> LoweredContent IR lowering (spec §8.2, T0 single frame). No SDK, no mutation — glue translates the IR."

[lints]
workspace = true

[dependencies]
sheet-core = { path = "../sheet-core" }
sheet-format = { path = "../sheet-format" }
serde.workspace = true

[dev-dependencies]
# Test-only: assert the camelCase/lowercase-align wire shape and the
# determinism JSON-equality (the SHIPPING crate carries no serde_json — the
# wasm surface serializes via serde-wasm-bindgen in sheet-js).
serde_json.workspace = true
