[package]
name = "sheet-xlsx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "paged.sheet XLSX I/O (spec §10): OPC zip + SpreadsheetML parse, the preservation invariant, writer. Zero-edit round-trip is byte-identical (modulo the calcChain ruling)."

[lints]
workspace = true

[dependencies]
sheet-core = { path = "../sheet-core" }
# DOCUMENTED DEVIATION from the spec §4 dependency table (which lists xlsx ->
# core only). The M1 style-map track (spec §8.3) has `VisualStyles` implement
# `sheet_lower::VisualStyleSource` so the page lowering + grid scene resolve
# the parsed visual styles through ONE trait — the cross-surface-parity
# contract. `sheet-lower` is a PURE leaf IR crate (model -> IR, no SDK), so
# this is leaf-IR reuse, not a render-surface dependency (the same rationale
# as sheet-grid's documented sheet-lower dep). No cycle: lower deps =
# core+format; adding it here makes xlsx -> lower -> (core, format).
sheet-lower = { path = "../sheet-lower" }
# DOCUMENTED DEVIATION from the spec §4 dependency table (xlsx -> core only).
# The M2 charts track (spec §8.4) parses `xl/charts/chartN.xml` into the FROZEN
# `sheet_chart::ChartModel` so the engine can list + render charts. `sheet-chart`
# is a PURE leaf crate (model + geometry IR, no SDK; deps = core+format), so this
# is leaf-IR reuse like the sheet-lower dep above — NOT a render-surface
# dependency, no inter-plugin contact, no cycle (xlsx -> chart -> core+format).
sheet-chart = { path = "../sheet-chart" }
# DOCUMENTED DEVIATION from the spec §4 dependency table (xlsx -> core only).
# The M3 localization track (spec §9, D-8) derives the workbook display locale
# from a custom numFmt's `[$…-LCID]` token; `sheet_format::compile` is the SINGLE
# source of that grammar (no re-implementation in the xlsx layer). `sheet-format`
# is a PURE leaf crate (deps = core), already pulled in transitively via
# sheet-lower/sheet-chart — declaring it directly makes the dependency explicit.
# No SDK, no inter-plugin contact, no cycle (xlsx -> format -> core).
sheet-format = { path = "../sheet-format" }
zip.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
compact_str.workspace = true
